--- a/blog-client-template/index.html
+++ b/blog-client-template/index.html
@@ -1,11 +1,26 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <a href="admin/index.html">ADMIN</a>
+    <hr />
+
+    <h1>My Blog</h1>
+
+    <ul id="post-list">
+      <!-- <li>
+          <h2>Title</h2>
+          <p>Author</p>
+          <p>Date</p>
+          <p>Content</p>
+          <hr>
+        </li> -->
+    </ul>
+
     <script src="js/posts.js"></script>
-</body>
+  </body>
 </html>
