--- a/blog-client-template/admin/create-post.html
+++ b/blog-client-template/admin/create-post.html
@@ -1,11 +1,29 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <a href="../index.html">Blog Page</a>
+
+    <h1>Create Post</h1>
+
+    <form action="">
+      <label for="title">Title</label>
+      <input type="text" id="title" />
+      <br />
+      <label for="author">Author</label>
+      <input type="text" id="author" />
+      <br />
+      <label for="post-content">Content</label>
+      <textarea name="content" id="post-content" cols="30" rows="10"></textarea>
+      <br />
+      <button type="submit">Update</button>
+    </form>
+    <a href="index.html">Back</a>
+    <!-- If the form succeeded in creating a new post, redirectthe user toadmin/index.html -->
     <script src="js/create-post.js"></script>
-</body>
+  </body>
 </html>
