--- a/blog-client-template/admin/index.html
+++ b/blog-client-template/admin/index.html
@@ -1,11 +1,34 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <a href="../index.html">Blog Page</a>
+
+    <h1>Handle Bog post</h1>
+
+    <button><a href="./create-post.html">Create New Post</a></button>
+
+    <table>
+      <thead>
+        <th>Title</th>
+        <th>Author</th>
+        <th>Date</th>
+        <th>Action</th>
+      </thead>
+      <tbody id="admin-posts">
+        <!-- <tr>
+          <td>Title</td>
+          <td>Aurhtor</td>
+          <td>Date</td>
+          <td>Action</td>
+        </tr> -->
+      </tbody>
+    </table>
+
     <script src="js/manage-posts.js"></script>
-</body>
+  </body>
 </html>
