--- a/blog-client-template/admin/create-post.html
+++ b/blog-client-template/admin/create-post.html
@@ -10,17 +10,17 @@
 
     <h1>Create Post</h1>
 
-    <form action="">
+    <form action="" id="create-post-form">
       <label for="title">Title</label>
-      <input type="text" id="title" />
+      <input type="text" id="title" name="title"/>
       <br />
       <label for="author">Author</label>
-      <input type="text" id="author" />
+      <input type="text" id="author" name="author"/>
       <br />
       <label for="post-content">Content</label>
       <textarea name="content" id="post-content" cols="30" rows="10"></textarea>
       <br />
-      <button type="submit">Update</button>
+      <button type="submit">Create</button>
     </form>
     <a href="index.html">Back</a>
     <!-- If the form succeeded in creating a new post, redirectthe user toadmin/index.html -->
