--- a/blog-client-template/admin/index.html
+++ b/blog-client-template/admin/index.html
@@ -8,7 +8,7 @@
   <body>
     <a href="../index.html">Blog Page</a>
 
-    <h1>Handle Bog post</h1>
+    <h1>Handle Blog post</h1>
 
     <button><a href="./create-post.html">Create New Post</a></button>
 
