--- a/blog-client-template/admin/update-post.html
+++ b/blog-client-template/admin/update-post.html
@@ -8,9 +8,10 @@
   <body>
     <a href="../index.html">Blog Page</a>
 
-    <h1>Create Post</h1>
+    <h1>Update Post</h1>
 
-    <form action="">
+    <form id="update-post-form" action="">
+      <!--
       <label for="title">Title</label>
       <input type="text" id="title" />
       <br />
@@ -21,6 +22,7 @@
       <textarea name="content" id="post-content" cols="30" rows="10"></textarea>
       <br />
       <button type="submit">Update</button>
+      -->
     </form>
     <a href="index.html">Back</a>
 
