--- a/blog-client-template/admin/create-post.html
+++ b/blog-client-template/admin/create-post.html
@@ -2,27 +2,70 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+      crossorigin="anonymous"
+    />
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <a href="../index.html">Blog Page</a>
+    <div class="container">
+      <div class="d-flex justify-content-end">
+        <button class="btnAdmin btn btn-primary">
+          <a href="../index.html" class="btnClass">Blog Page</a>
+        </button>
+      </div>
 
-    <h1>Create Post</h1>
+      <div class="jumbotron text-center">
+        <h1>Create Post</h1>
+      </div>
 
-    <form action="" id="create-post-form">
-      <label for="title">Title</label>
-      <input type="text" id="title" name="title"/>
-      <br />
-      <label for="author">Author</label>
-      <input type="text" id="author" name="author"/>
-      <br />
-      <label for="post-content">Content</label>
-      <textarea name="content" id="post-content" cols="30" rows="10"></textarea>
-      <br />
-      <button type="submit">Create</button>
-    </form>
-    <a href="index.html">Back</a>
+      <form action="" id="create-post-form">
+        <div class="mb-3 form-group">
+          <label for="title" class="form-label">Title</label>
+          <input type="text" id="title" name="title" class="form-control" />
+        </div>
+
+        <div class="mb-3 form-group">
+          <label for="author" class="form-label">Author</label>
+          <input type="text" id="author" name="author" class="form-control" />
+        </div>
+
+        <div class="mb-3 form-group">
+          <label for="tags" class="form-label">Tags</label>
+          <small class="text-muted"
+            >(Hold down CTRL when selecting multiple options)</small
+          >
+          <select multiple class="form-control" id="tags" name="tags">
+            <option value=" Sport" selected>Sport</option>
+            <option value=" Beer">Beer</option>
+            <option value=" Vacation" selected>Vacation</option>
+            <option value=" Animals">Animals</option>
+            <option value=" Shopping">Shopping</option>
+          </select>
+        </div>
+
+        <div class="md-3 form-group">
+          <label for="post-content" class="form-label">Content</label>
+          <textarea
+            class="form-control"
+            name="content"
+            id="post-content"
+            rows="3"
+          ></textarea>
+        </div>
+
+        <div class="mt-5 d-flex justify-content-between">
+          <a href="index.html" class="btnClass btn btn-secondary">Back</a>
+          <button class="btnCreate btn btn-success" type="submit">
+            Create
+          </button>
+        </div>
+      </form>
+    </div>
     <!-- If the form succeeded in creating a new post, redirectthe user toadmin/index.html -->
     <script src="js/create-post.js"></script>
   </body>
