--- a/blog-client-template/admin/index.html
+++ b/blog-client-template/admin/index.html
@@ -3,32 +3,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <a href="../index.html">Blog Page</a>
+    <div class="container">
+      <div class="d-flex justify-content-end">
+        <button class="btnAdmin btn btn-primary">
+          <a href="../index.html" class="btnClass">Blog Page</a>
+        </button>
+      </div>
+      <div class="jumbotron">
+        <h1 class="text-center">Handle Blog Post</h1>
+      </div>
+      <button class="btnCreate btn btn-success mb-4">
+        <a href="./create-post.html">Create New Post</a>
+      </button>
 
-    <h1>Handle Blog post</h1>
-
-    <button><a href="./create-post.html">Create New Post</a></button>
-
-    <table>
-      <thead>
-        <th>Title</th>
-        <th>Author</th>
-        <th>Date</th>
-        <th>Action</th>
-      </thead>
-      <tbody id="admin-posts">
-        <!-- <tr>
+      <table class="table">
+        <thead>
+          <th scope="col">Title</th>
+          <th scope="col">Author</th>
+          <th scope="col">Date</th>
+          <th scope="col">Tags</th>
+          <th scope="col">Action</th>
+        </thead>
+        <tbody id="admin-posts">
+          <!-- <tr>
           <td>Title</td>
-          <td>Aurhtor</td>
+          <td>Author</td>
           <td>Date</td>
           <td>Action</td>
         </tr> -->
-      </tbody>
-    </table>
-
+        </tbody>
+      </table>
+    </div>
     <script src="js/manage-posts.js"></script>
   </body>
 </html>
