--- a/blog-client-template/admin/update-post.html
+++ b/blog-client-template/admin/update-post.html
@@ -3,15 +3,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <a href="../index.html">Blog Page</a>
+    <div class="container">
+      <div class="d-flex justify-content-end">
+        <button class="btnAdmin btnClass btn btn-primary">
+          l <a href="../index.html">Blog Page</a>
+        </button>
+      </div>
+      <div class="jumbotron text-center">
+        <h1>Update Post</h1>
+      </div>
 
-    <h1>Update Post</h1>
-
-    <form id="update-post-form" action="">
-      <!--
+      <form id="update-post-form" action="">
+        <!--
       <label for="title">Title</label>
       <input type="text" id="title" />
       <br />
@@ -22,12 +34,14 @@
       <textarea name="content" id="post-content" cols="30" rows="10"></textarea>
       <br />
       <button type="submit">Update</button>
-      -->
-    </form>
-    <a href="index.html">Back</a>
-
-    <!--- The difference is that all fields are pre-filled with the data of the existing post.
-        -  If the form succeeded in updating the post, redirectthe user to admin/index.html-->
+      --></form>
+      <div class="mt-5 d-flex justify-content-between">
+        <a href="index.html" class="btnClass btn btn-secondary">Back</a>
+        <button class="btnCreate btn btn-info" type="submit" id="update">
+          Update
+        </button>
+      </div>
+    </div>
 
     <script src="js/update-post.js"></script>
   </body>
