--- a/blog-client-template/index.html
+++ b/blog-client-template/index.html
@@ -3,24 +3,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <a href="admin/index.html">ADMIN</a>
-    <hr />
+    <div class="container">
+      <div class="d-flex justify-content-end">
+        <button class="btn btn-primary">
+          <a href="admin/index.html" class="">ADMIN</a>
+        </button>
+      </div>
+      <hr />
 
-    <h1>My Blog</h1>
+      <div class="jumbotron">
+        <h1 class="text-center">My Blog</h1>
+      </div>
 
-    <ul id="post-list">
-      <!-- <li>
-          <h2>Title</h2>
-          <p>Author</p>
-          <p>Date</p>
-          <p>Content</p>
-          <hr>
-        </li> -->
-    </ul>
-
+      <ul class="list-group" id="post-list">
+        <!-- <li>
+            <h2>Title</h2>
+            <p>Author</p>
+            <p>Date</p>
+            <p>Content</p>
+            <hr>
+          </li> -->
+      </ul>
+    </div>
     <script src="js/posts.js"></script>
   </body>
 </html>
