--- a/blog-client-template/post.html
+++ b/blog-client-template/post.html
@@ -1,13 +1,41 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+      crossorigin="anonymous"
+    />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <h1>This page is required for the VG grade</h1>
-    
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="d-flex justify-content-end">
+        <button class="btn btn-primary">
+          <a href="admin/index.html">ADMIN</a>
+        </button>
+      </div>
+      <hr />
+
+      <div id="main" class="jumbotron">
+        <!--
+              <h1>Title</h1>
+              <p><em>Author | Date </em></p>
+              <p><strong>Tags:</strong>....</p>
+              <p>Content</p>
+          -->
+      </div>
+
+      <div class="d-flex justify-content-start">
+        <button class="btnClass btn btn-secondary">
+          <a href="index.html">Back</a>
+        </button>
+      </div>
+    </div>
+
     <script src="js/post.js"></script>
-</body>
+  </body>
 </html>
