--- a/blog-client-template/admin/create-post.html
+++ b/blog-client-template/admin/create-post.html
@@ -40,11 +40,11 @@
             >(Hold down CTRL when selecting multiple options)</small
           >
           <select multiple class="form-control" id="tags" name="tags">
-            <option value=" Sport" selected>Sport</option>
-            <option value=" Beer">Beer</option>
-            <option value=" Vacation" selected>Vacation</option>
-            <option value=" Animals">Animals</option>
-            <option value=" Shopping">Shopping</option>
+            <option value="Sport">Sport</option>
+            <option value="Beer">Beer</option>
+            <option value="Vacation">Vacation</option>
+            <option value="Animals">Animals</option>
+            <option value="Shopping">Shopping</option>
           </select>
         </div>
 
