--- a/blog-client-template/admin/index.html
+++ b/blog-client-template/admin/index.html
@@ -33,14 +33,7 @@
           <th scope="col">Tags</th>
           <th scope="col">Action</th>
         </thead>
-        <tbody id="admin-posts">
-          <!-- <tr>
-          <td>Title</td>
-          <td>Author</td>
-          <td>Date</td>
-          <td>Action</td>
-        </tr> -->
-        </tbody>
+        <tbody id="admin-posts"></tbody>
       </table>
     </div>
     <script src="js/manage-posts.js"></script>
