--- a/blog-client-template/admin/update-post.html
+++ b/blog-client-template/admin/update-post.html
@@ -9,40 +9,66 @@
       integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
       crossorigin="anonymous"
     />
+
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="container">
       <div class="d-flex justify-content-end">
         <button class="btnAdmin btnClass btn btn-primary">
-          l <a href="../index.html">Blog Page</a>
+          <a href="../index.html">Blog Page</a>
         </button>
       </div>
+
       <div class="jumbotron text-center">
         <h1>Update Post</h1>
       </div>
 
       <form id="update-post-form" action="">
-        <!--
-      <label for="title">Title</label>
-      <input type="text" id="title" />
-      <br />
-      <label for="author">Author</label>
-      <input type="text" id="author" />
-      <br />
-      <label for="post-content">Content</label>
-      <textarea name="content" id="post-content" cols="30" rows="10"></textarea>
-      <br />
-      <button type="submit">Update</button>
-      --></form>
-      <div class="mt-5 d-flex justify-content-between">
-        <a href="index.html" class="btnClass btn btn-secondary">Back</a>
-        <button class="btnCreate btn btn-info" type="submit" id="update">
-          Update
-        </button>
-      </div>
+        <div class="mb-3 form-group">
+          <label for="title" class="form-label">Title</label>
+          <input type="text" id="title" name="title" class="form-control" />
+        </div>
+
+        <div class="mb-3 form-group">
+          <label for="author" class="form-label">Author</label>
+          <input type="text" id="author" name="author" class="form-control" />
+        </div>
+
+        <div class="mb-3 form-group">
+          <label for="tags" class="form-label">Tags</label>
+          <small class="text-muted"
+            >(Hold down CTRL when selecting multiple options)</small
+          >
+
+          <select
+            class="form-select"
+            multiple="multiple"
+            id="tags"
+            name="tags"
+          ></select>
+        </div>
+
+        <div class="md-3 form-group" id="titleDiv">
+          <label for="post-content" class="form-label">Content</label>
+          <textarea
+            class="form-control"
+            name="content"
+            id="post-content"
+            rows="3"
+          ></textarea>
+        </div>
+
+        <div class="mt-5 d-flex justify-content-between">
+          <a href="index.html" class="btnClass btn btn-secondary">Back</a>
+          <button class="btnCreate btn btn-info" type="submit" id="update">
+            Update
+          </button>
+        </div>
+      </form>
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/update-post.js"></script>
   </body>
 </html>
