--- a/blog-client-template/admin/create-post.html
+++ b/blog-client-template/admin/create-post.html
@@ -23,7 +23,7 @@
         <h1>Create Post</h1>
       </div>
 
-      <form action="" id="create-post-form">
+      <form action="" id="create-post-form" class="col-8 offset-2">
         <div class="mb-3 form-group">
           <label for="title" class="form-label">Title</label>
           <input type="text" id="title" name="title" class="form-control" />
