--- a/blog-client-template/index.html
+++ b/blog-client-template/index.html
@@ -24,7 +24,7 @@
         <h1 class="text-center">My Blog</h1>
       </div>
 
-      <ul class="list-group" id="post-list">
+      <ul class="list-group col-8 offset-2" id="post-list">
         <!-- <li>
             <h2>Title</h2>
             <p>Author</p>
